cmake_minimum_required(VERSION 3.1)
project(maxFlowAlgorithms)
set(Boost_USE_STATIC_LIBS       OFF)
set(Boost_USE_MULTITHREADED     ON)
set(Boost_USE_STATIC_RUNTIME    OFF)
find_package(Boost 1.53.0 COMPONENTS random REQUIRED)

add_library(maxFlowAlgorithms INTERFACE)
target_include_directories(maxFlowAlgorithms INTERFACE ${Boost_INCLUDE_DIRS})
target_include_directories(maxFlowAlgorithms INTERFACE ${PROJECT_SOURCE_DIR})
export(TARGETS maxFlowAlgorithms FILE maxFlowAlgorithmsConfig.cmake)
